--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/section_2_1.css" />
     <link rel="stylesheet" href="./css/scrollControls.css" />
+    <link rel="stylesheet" href="./css/index.css" />
 
     <script src="./js/header-scroll.js" defer></script>
     <script src="./js/weather.js" defer></script>
@@ -41,9 +42,10 @@
       <div class="logo">
         <img src="images/logo.png" alt="AI Partner 로고" />
       </div>
-      <div class="header-btns">
-        <button class="header-btns">Login</button>
-        <button class="header-btns">회원가입</button>
+      <!-- 헤더 버튼 -->
+      <div class="header-btns" id="headerBtns">
+        <button id="loginBtn" class="header-btns">Login</button>
+        <button id="signupBtn" class="header-btns">회원가입</button>
       </div>
     </header>
 
@@ -97,8 +99,18 @@
         </div>
 
         <div class="left-buttons">
-          <button class="primary-btn">매출 예측 보기</button>
-          <button class="secondary-btn">재고 추천 확인</button>
+          <button
+            class="primary-btn"
+            onclick="location.href='./templates/forecast.html'"
+          >
+            매출 예측 보기
+          </button>
+          <button
+            class="secondary-btn"
+            onclick="location.href='./templates/inventory.html'"
+          >
+            재고 추천 확인
+          </button>
         </div>
 
         <div class="result-box">
@@ -106,7 +118,12 @@
           <p>내일 예상 매출은 <strong>○○○○원</strong> 입니다.</p>
           <p>재고 보충이 필요한 품목이 있습니다.</p>
           <!-- ✅ 결과창 내부 오른쪽 버튼 -->
-          <button class="result-inventory-btn">재고 현황</button>
+          <button
+            class="result-inventory-btn"
+            onclick="window.location.href='./templates/inventory.html'"
+          >
+            재고 현황
+          </button>
         </div>
       </div>
       <!-- 배경 영상 -->
@@ -217,43 +234,74 @@
           class="feature-card"
           onclick="location.href='./templates/ai-report.html'"
         >
-          <div class="feature-icon"></div>
-          AI 매출 리포트
+          <div class="feature-icon">
+            <img src="./icons/ai-report.png" alt="AI 매출 리포트" />
+          </div>
+          <h3 class="feature-title">AI 매출 리포트</h3>
+          <p class="feature-desc">
+            AI 분석을 통해 일자별·시간대별 매출 흐름을 예측합니다.
+          </p>
         </div>
         <div
           class="feature-card"
           onclick="location.href='./templates/optimization.html'"
         >
-          <div class="feature-icon"></div>
-          운영 최적화
+          <div class="feature-icon">
+            <img src="./icons/optimization.png" alt="운영 최적화" />
+          </div>
+          <h3 class="feature-title">운영 최적화</h3>
+          <p class="feature-desc">
+            인력·재고·운영 데이터를 기반으로 최적의 운영 전략을 제안합니다.
+          </p>
         </div>
         <div
           class="feature-card"
           onclick="location.href='./templates/emotional-card.html'"
         >
-          <div class="feature-icon"></div>
-          감성 케어
+          <div class="feature-icon">
+            <img src="./icons/emotional.png" alt="감성 케어" />
+          </div>
+          <h3 class="feature-title">감성 케어</h3>
+          <p class="feature-desc">
+            사업주를 위한 감정 분석과 맞춤형 케어 리포트를 제공합니다.
+          </p>
         </div>
         <div
           class="feature-card"
           onclick="location.href='./templates/dashboard.html'"
         >
-          <div class="feature-icon"></div>
-          의사결정 대시보드
+          <div class="feature-icon">
+            <img src="./icons/dashboard.png" alt="의사결정 대시보드" />
+          </div>
+          <h3 class="feature-title">의사결정 대시보드</h3>
+          <p class="feature-desc">
+            매출·재고·운영 데이터를 한눈에 확인하고 빠르게 의사결정을
+            지원합니다.
+          </p>
         </div>
         <div
           class="feature-card"
           onclick="location.href='./templates/community.html'"
         >
-          <div class="feature-icon"></div>
-          커뮤니티
+          <div class="feature-icon">
+            <img src="./icons/community.png" alt="커뮤니티" />
+          </div>
+          <h3 class="feature-title">커뮤니티</h3>
+          <p class="feature-desc">
+            사업주 간 정보 공유와 실시간 소통이 가능한 공간입니다.
+          </p>
         </div>
         <div
           class="feature-card"
           onclick="location.href='./templates/ai-consult.html'"
         >
-          <div class="feature-icon"></div>
-          AI 상담
+          <div class="feature-icon">
+            <img src="./icons/ai-consult.png" alt="AI 상담" />
+          </div>
+          <h3 class="feature-title">AI 상담</h3>
+          <p class="feature-desc">
+            운영 중 발생하는 고민을 AI가 즉시 상담해드립니다.
+          </p>
         </div>
       </div>
     </section>
@@ -362,6 +410,53 @@
             section.scrollIntoView({ behavior: "smooth" });
             break;
           }
+        }
+      });
+    </script>
+    <!-- 로그인 팝업 -->
+    <div class="login-modal" id="loginModal">
+      <div class="login-frame">
+        <button class="modal-close">✕</button>
+
+        <iframe
+          id="loginIframe"
+          src="./templates/login.html"
+          frameborder="0"
+          scrolling="no"
+        ></iframe>
+      </div>
+    </div>
+
+    <script>
+      const loginBtn = document.getElementById("loginBtn");
+      const signupBtn = document.getElementById("signupBtn");
+      const loginModal = document.getElementById("loginModal");
+      const closeBtn = document.querySelector(".modal-close");
+      const loginIframe = document.getElementById("loginIframe");
+
+      // 🔹 Login 버튼 → 로그인 창
+      loginBtn.addEventListener("click", () => {
+        loginIframe.src = "./templates/login.html";
+        loginModal.style.display = "flex";
+      });
+
+      // ✅ 회원가입 버튼 → 회원가입 창 열기
+      signupBtn.addEventListener("click", () => {
+        loginIframe.src = "./templates/signup.html"; // 👈 핵심
+        loginModal.style.display = "flex";
+      });
+
+      // 닫기 버튼
+      closeBtn.addEventListener("click", () => {
+        loginIframe.src = loginIframe.src; // iframe 초기화
+        loginModal.style.display = "none";
+      });
+
+      // 배경 클릭 시 닫기
+      loginModal.addEventListener("click", (e) => {
+        if (e.target === loginModal) {
+          loginIframe.src = loginIframe.src;
+          loginModal.style.display = "none";
         }
       });
     </script>
